tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0180/input.js
x: while (true) { (function () { break; }); }
